fix(calcite): align cache contract with cursor rules